--- a/README
+++ b/README
@@ -17,16 +17,32 @@ mvn -Dsling.stop install
 
 curl -u admin:admin -F "sling:resourceType=myberkeley/scriptedsample" -F title="Some Title"  http://localhost:8080/content/firstscriptedsample
 
+For more on RESTful content management through Sling, see:
+http://sling.apache.org/site/manipulating-content-the-slingpostservlet.html
+
 5. To try the Groovy script:
 
 curl http://localhost:8080/content/firstscriptedsample.json
 
-6. To try the server-side Javascript script:
+To try the server-side Javascript script:
 
 curl http://localhost:8080/content/firstscriptedsample.html
 
+For more on server-side scripting in Sling, see:
+
+http://cwiki.apache.org/SLING/scripting-variables.html
+
+6. To try the servlet:
+
+curl http://localhost:8080/content/firstscriptedsample.servletized.json
+
+For more on servlets:
+http://sling.apache.org/site/servlets.html
+
+For more on URL mapping:
+http://sling.apache.org/site/url-decomposition.html
+
 TO DO
 
-- Add sample servlet.
 - Add sample JSP.
 - Create initial test content on component load.
