--- a/caldav/README
+++ b/caldav/README
@@ -18,9 +18,13 @@ Then doing an OPTIONS as each user is enough to make Bedework create its necessa
     curl -u 300849:testuser http://test.media.berkeley.edu:8080/ucaldav/principals/users/300849/ -X OPTIONS
 
 If provided its optional 3rd and 4th arguments, the sling data loader script will do an OPTIONS request
-for every user it loads. Example command line:
+for every user it loads. Example command line for the TEST data loader:
 
     sling_data_loader.rb http://localhost:8080/ admin test.media.berkeley.edu 8080
+
+The Oracle (real) data loader syntax is different:
+
+    ruby oracle_data_loader.rb -i $db_instance -u $db_user -p $db_password -a $app_server -q $app_server_admin_password --bedeworkserver test.media.berkeley.edu --bedeworkport 8080
 
 Once the sling data loader runs, reset the jboss login config to its original state:
 
